# sql_select_parser

./: Cargo.toml  Makefile  docs.md  readme.md
queries/: sample.sql
src/: error.rs  lib.rs  main.rs  sql.pest
tests/: test.rs  test_query.rs
