[package]
name = "sql_select_parser"
authors = ["Bohdan Prokhorov <howchromium@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/heliochromic/sql_select_parser"
description = "The SQL Parser CLI is a command-line tool designed to parse and analyze SQL SELECT queries."

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.66"
